--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -3,8 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 163%;
-  /* or 29px */
+  line-height: 29px;
   color: #FFFFFF;
   margin: 0;
   margin-bottom: 26px;
