--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 768px) {
   .intro__title {
-    font-size: calc((100vw - 320px)/(860 - 320) * (54 - 32) + 32px);;
+    font-size: calc((100vw - 320px)/(860 - 320) * (54 - 32) + 32px);
     line-height: calc( (100vw - 320px)/(860 - 320) * (58 - 35) + 35px);
   }
 }
