--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 860px) {
   .lead__subtitle {
-    font-size: calc((100vw - 320px)/(860 - 320) * (30 - 16) + 16px);;
+    font-size: calc((100vw - 320px)/(860 - 320) * (30 - 16) + 16px);
     line-height: calc( (100vw - 320px)/(860 - 320) * (36 - 20) + 20px);
     margin-bottom: 40px;
     width: 75%;
