--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,6 +4,7 @@
   position: relative;
   padding-top: 92px;
   padding-bottom: 92px;
+  margin: auto;
 }
 
 @media screen and (max-width: 1024px) {
@@ -16,14 +17,15 @@
   .intro {
     width: calc(100% - 48px);
     margin: auto;
-    padding-bottom: 88px;
     padding-top: 88px;
+    padding-bottom: 88px;
   }
 }
 
 @media screen and (max-width: 400px) {
   .intro {
     width: calc(100% - 32px);
+    padding-top: 64px;
     padding-bottom: 64px;
   }
 }
