--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,4 +1,5 @@
 .cover__subtitle {
+  margin-block: 0;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -8,6 +9,7 @@
   color: #FFFFFF;
   margin: 32px auto 0;
   max-width: 360px;
+  z-index: 1;
 }
 
 @media screen and (max-width: 600px) {
