--- a/blocks/cover/__title-subtitle/cover__title-subtitle.css
+++ b/blocks/cover/__title-subtitle/cover__title-subtitle.css
@@ -1,13 +1,21 @@
 .cover__title-subtitle {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
-  width: 100%;
-  z-index: 1;
-  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  align-content: center;
+  width: 100%;
+  text-decoration: none;
+  background-color: rgba(42, 44, 47, 0.3);
+  position: relative;
+}
+
+.cover__title-subtitle:hover::before {
+  content: "";
+  background-color: rgba(42, 44, 47, 0.8);
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 
