--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,17 +1,29 @@
 .cover {
+  background-image: url(../../images/cover-trains.jpg);
+  display: flex;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   width: calc(100% - 96px);
   position: relative;
-  margin-top: 92px;
+  margin: 92px auto 0;
 }
 
-@media screen and (max-width: 768px) {
+.cover::after {
+  content: "";
+  width: 0;
+  height: 0;
+  padding-top: calc(740 / 1184 * 100%);
+}
+
+@media screen and (max-width: 1100px) {
   .cover {
     width: 100%;
     margin-top: 90px;
 }
 }
 
-@media screen and (max-width: 4500px) {
+@media screen and (max-width: 600px) {
   .cover {
     margin-top: 66px;
   }
