--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,6 +6,8 @@
   line-height: 18px;
   color: #FFFFFF;
   text-decoration: none;
+  width: max-content;
+  transition: opacity 0.5s linear;
 }
 
 @media screen and (max-width: 748px) {
@@ -13,4 +15,9 @@
     font-size: 24px;
     line-height: 24px;
   }
+}
+
+.footer__link:hover {
+  opacity: .8;
+  transition: opacity 0.5s linear;
 }
