--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,15 +1,15 @@
 .footer {
   width: calc(100% - 96px);
   display: flex;
-  column-gap: 18px;
-  justify-content: flex-start;
+  justify-content: space-between;
   padding-top: 92px;
   padding-bottom: 24px;
   position: relative;
   box-sizing: border-box;
+  margin: auto;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 850px) {
   .footer {
     width: calc(100% - 48px);
   }
@@ -19,6 +19,7 @@
   .footer {
     width: calc(100% - 32px);
     flex-direction: column;
-    row-gap: 32px;
+    row-gap: 48px;
+    padding-top: 64px;
   }
 }
