--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,29 +3,23 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
-  font-size: calc( (100vw - 320px)/(1280 - 320) * (96 - 40) + 40px);
-  line-height: calc( (100vw - 320px)/(1280 - 320) * (100 - 44) + 44px);
+  font-size: 96px;
+  line-height: 100px;
   text-align: center;
   color: #FFFFFF;
   margin-bottom: 32px;
-  width: 80%;
+  max-width: 720px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .lead__title {
-    width: 70%;
-  }
-}
-
-@media screen and (max-width: 590px) {
-  .lead__title {
-    width: 80%;
+    font-size: calc( (100vw - 320px)/(768 - 320) * (96 - 40) + 40px);
+    line-height: calc( (100vw - 320px)/(768 - 320) * (100 - 44) + 44px);
   }
 }
 
 @media screen and (max-width: 390px) {
   .lead__title {
-    width: 95%;
     margin-bottom: 16px;
   }
 }
