--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,10 +1,10 @@
 .lead {
   width: calc(100% - 296px);
-  margin-top: 56px;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
+  margin: 56px auto 0;
 }
 
 @media screen and (max-width: 1024px) {
@@ -17,6 +17,5 @@
 @media screen and (max-width: 768px) {
   .lead {
     width: 100%;
-    margin-top: 48px;
   }
 }
