--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,4 +1,5 @@
 .places__paragraph {
+  margin-block: 0;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -12,11 +13,17 @@
 @media screen and (max-width: 768px) {
   .places__paragraph {
     font-size: 16px;
+    line-height: 26px;
   }
 }
 
 @media screen and (max-width: 600px) {
   .places__paragraph {
     margin-left: 16px;
+    margin-right: 16px;
   }
+}
+
+.places__paragraph:last-child {
+  margin-bottom: 0px;  
 }
