--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
   margin-block: 0;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -17,5 +17,6 @@
     font-size: 14px;
     line-height: 16px;
     max-width: 288px;
+    margin-top: 16px;
   }
 }
