--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,7 @@
   max-width: 1280px;
   min-width: 320px;
   position: relative;
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
   background-color: #2A2C2F;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
