--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,11 +1,18 @@
 .photo-grid {
   width: calc(100% - 96px);
   margin: auto;
+  padding-bottom: 12px;
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
     width: calc(100% - 48px);
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .photo-grid {
+    padding-bottom: 0;
   }
 }
 
