--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,6 +1,6 @@
 .places__paragraph {
   margin-block: 0;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -14,6 +14,7 @@
   .places__paragraph {
     font-size: 16px;
     line-height: 26px;
+    margin-bottom: 25px;
   }
 }
 
