--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,7 +1,7 @@
 .places__title {
   margin: 0;
   margin-block: 0;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
@@ -15,15 +15,16 @@
   .places__title {
     font-size: 42px;
     line-height: 46px;
+    padding-top: 76px;
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .places__title {
     font-size: 32px;
     line-height: 35px;
     margin-left: 16px;
-    padding-top: 64px;
+    padding-top: 50px;
     padding-bottom: 32px;
   }
 }
